--- a/ex6_2.html
+++ b/ex6_2.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="img/livrojs.png">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="icon" href="livrojs.png">
+  <link rel="stylesheet" href="estilos.css">
   <title>Exemplo 6.2</title>
 </head>
 
 <body>
   <!-- doctype, html, head e body (conf. exemplo 4.2) -->
-  <img src="img/ex6_2.jpg" alt="Jogo dos Números" class="normal">
+  <img src="ex6_2.jpg" alt="Jogo dos Números" class="normal">
   <h1>Jogo Descubra o Número</h1>
   <form>
     <p>Número:
@@ -23,7 +23,7 @@
   <h3>Erros: <span id="outErros">0</span></h3>
   <h3>Chances: <span id="outChances">6</span></h3>
   <h3 id="outDica" class="italico">Dica: É um número entre 1 e 100</h3>
-  <script src="js/ex6_2.js"></script>
+  <script src="ex6_2.js"></script>
   <!-- /body e /html -->
 </body>
 
