--- a/ex6_2.html
+++ b/ex6_2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="livrojs.png">
   <link rel="stylesheet" href="estilos.css">
-  <title>Exemplo 6.2</title>
+  <title>Jogo de Adivinhação</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   </form>
   <h3>Erros: <span id="outErros">0</span></h3>
   <h3>Chances: <span id="outChances">6</span></h3>
-  <h3 id="outDica" class="italico">Dica: É um número entre 1 e 100</h3>
+  <h3 id="outDica" class="italico">O número está entre 1 e 100.</h3>
   <script src="ex6_2.js"></script>
   <!-- /body e /html -->
 </body>
